# kuma-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: Common.cmake  CompileOptions.cmake  CompileTarget.cmake  PlatformMacros.cmake
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt
src/Engine/: CMakeLists.txt
src/Engine/Private/: KumaEngine.cpp  SwarmEngine.cpp
src/Engine/Private/Swarm/: SwarmManager.cpp
src/Engine/Public/: KumaEngine.h  SwarmEngine.h
src/Engine/Public/Core/: CoreDefine.h  CoreMinimal.h
src/Engine/Public/Swarm/: Entity.h  SwarmDefine.h  SwarmEntity.h  SwarmManager.h
src/Engine/Public/Swarm/Interfaces/: Component.h  SwarmComponent.h  SwarmSystem.h  System.h
src/Launch/: CMakeLists.txt
src/Launch/Common/: Launch.cpp
src/Launch/Mac/: LaunchMac.mm
src/Launch/Private/: Launch.cpp
src/Launch/Windows/: LaunchWin.cpp
src/Math/: CMakeLists.txt
src/Math/Private/: Matrix.cpp  Rotator.cpp  Transform.cpp  Vector.cpp
src/Math/Public/: MathFwd.h  Matrix.h  Plane.h  Rotator.h  Transform.h  Vector.h
src/Renderer/: CMakeLists.txt
src/Renderer/Common/Private/: Renderer.cpp  SceneProxy.cpp
src/Renderer/Common/Public/: MeshResource.h  PipelineState.h  RenderResource.h  Renderer.h  SceneProxy.h  SceneResource.h  Shader.h  StateObject.h  TransformBuffer.h  VertexBuffer.h
src/Renderer/D3D12/Private/: D3D12CmdList.cpp  D3D12CmdList.h  D3D12CmdQueue.cpp  D3D12CmdQueue.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12Mesh.cpp  D3D12Mesh.h  D3D12Renderer.cpp  D3D12Shader.cpp  D3D12Shader.h  D3D12StateObject.cpp  D3D12StateObject.h  D3D12Viewport.cpp  D3D12Viewport.h
src/Renderer/D3D12/Public/: D3D12Renderer.h
src/Renderer/Metal/Private/: MetalCmdQueue.cpp  MetalDevice.cpp  MetalDevice.h  MetalInstance.cpp  MetalInstance.h  MetalMesh.cpp  MetalMesh.h  MetalRenderData.h  MetalRenderer.cpp  MetalScene.cpp  MetalScene.h  MetalSceneBuffer.cpp  MetalSceneBuffer.h  MetalShader.cpp  MetalShader.h  MetalStateObject.cpp  MetalStateObject.h  MetalTransBuffer.cpp  MetalTransBuffer.h  MetalVertexBuffer.cpp  MetalVertexBuffer.h  MetalViewport.h  MetalViewport.mm
src/Renderer/Metal/Public/: MetalCmdQueue.h  MetalDevice.h  MetalRenderer.h  MetalStateObject.h  MetalVertexBuffer.h  MetalViewport.h
src/Runtime/: CMakeLists.txt
src/Runtime/Private/: SwarmEngine.cpp
src/Runtime/Private/Engine/: Engine.cpp  KumaMesh.cpp  StaticMesh.cpp  SwarmEngine.cpp
src/Runtime/Private/Kuma/: KumaEngine.cpp
src/Runtime/Private/Kuma/Entities/: CameraEntity.cpp  KumaEntity.cpp  KumaWorld.cpp
src/Runtime/Private/Kuma/Systems/: CameraRenderSystem.cpp  CameraSystem.cpp  KumaSystemBase.cpp  MeshRenderSystem.cpp  PrimitiveSystem.cpp  RotationSystem.cpp  WorldHierarchicalSystem.cpp
src/Runtime/Private/Swarm/: Entity.cpp  EntityBase.cpp  Manager.cpp  SwarmManager.cpp
src/Runtime/Private/Swarm/Utilties/: ComponentArray.h
src/Runtime/Public/: CoreMinimal.h
src/Runtime/Public/Core/: CoreDefine.h
src/Runtime/Public/Core/Templates/: Singleton.h
src/Runtime/Public/Engine/: Engine.h  StaticMesh.h  SwarmEngine.h
src/Runtime/Public/Kuma/: KumaEngine.h
src/Runtime/Public/Kuma/Components/: CameraData.h  Primitive.h  RotationData.h  StaticMeshData.h  Transform.h  TransformData.h  World.h  WorldData.h  WorldEntity.h  WorldEntityData.h
src/Runtime/Public/Kuma/Entities/: CameraEntity.h  KumaEntity.h  KumaWorld.h
src/Runtime/Public/Kuma/Systems/: CameraRenderSystem.h  CameraSystem.h  KumaSystemBase.h  MeshRenderSystem.h  PrimitiveSystem.h  RotationSystem.h  WorldHierarchicalSystem.h
src/Runtime/Public/Math/: Vector.h
src/Runtime/Public/Swarm/: Component.h  Definition.h  Entity.h  EntityBase.h  Manager.h  SwarmDefine.h  SwarmManager.h  System.h
src/Runtime/Public/Swarm/Containers/: HandleAllocator.h  Signature.h  TypedArray.h
src/Runtime/Public/Swarm/Interfaces/: Component.h  Identifiable.h  System.h
src/Runtime/Public/Swarm/Utilities/: ComponentArray.h
src/Swarm/: CMakeLists.txt
src/Swarm/Private/: Entity.cpp  EntityBase.cpp  EntityQuery.cpp  Manager.cpp  System.cpp
src/Swarm/Public/: Component.h  Entity.h  EntityBase.h  EntityQuery.h  ExecutionContext.h  Manager.h  System.h  SystemUpdateContext.h  TypeHasher.h
src/Swarm/Public/Containers/: HandleAllocator.h  TypedArray.h
src/Swarm/Public/Interfaces/: Identifiable.h  System.h
src/Tests/: CMakeLists.txt
src/Tests/Cases/: SwarmTest.cpp  SwarmTests.cpp  TypedArrayTests.cpp  VectorTests.cpp
src/Tests/Cases/Kuma/: WorldTests.cpp
src/Tests/Cases/Math/: MatrixTests.cpp  RotatorTests.cpp  VectorTests.cpp
src/Tests/Cases/Swarm/: SwarmTests.cpp  TypedArrayTests.cpp
